Should now work on any MC1.8.x version

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,6 @@ buildscript {
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
-        classpath 'org.ajoberstar:gradle-git:0.10.1'
     }
 }
 plugins {
@@ -21,21 +20,10 @@ plugins {
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
-apply plugin: 'maven-publish'
 
-import org.ajoberstar.grgit.Grgit
-
-def repo = Grgit.open(project.file('.'))
-project.ext.gitHash = repo.log().find().abbreviatedId
-
-boolean dev = project.hasProperty('chisel_dev') && project.chisel_dev.equalsIgnoreCase('true')
-
-ext.buildnumber = 0
-project.buildnumber = System.getenv('BUILD_NUMBER') != null ? System.getenv('BUILD_NUMBER') : project.ext.gitHash
-
-version = "MC${minecraft_version}-${mod_version}.${buildnumber}"
-group = "team.chisel" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = dev ? "StupidCleaner_DEV" : "StupidCleaner"
+version = "MC${minecraft_version}-${mod_version}"
+group = "tterrag.stupidcleaner" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "StupidCleaner"
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
@@ -82,51 +70,3 @@ processResources {
 		exclude 'mcmod.info'
     }
 }
-
-String getChangelogText() {
-    def changelogFile = file('changelog.txt')
-    String str = ''
-    int lineCount = 0
-    boolean done = false
-    changelogFile.eachLine {
-        if (done || it == null) {
-            return
-        }
-        if (it.size() > 1) {
-            def temp = it
-            if (lineCount == 0) {
-                temp = "Chisel ${version}"
-                temp = "<h2>$temp</h2>"
-            } else if (it.startsWith('-')) {
-                temp = "&nbsp;&nbsp;&nbsp;$temp"
-            } else {
-                temp = "<h4>$temp</h4>"
-            }
-            str += "$temp<br/>"
-            lineCount++
-            return
-        } else {
-            done = true
-        }
-    }
-    return str
-}
-
-tasks.curseforge.enabled = !dev && project.hasProperty('curseforge_key')
-    
-curseforge {
-    if (project.hasProperty('curseforge_key')) {
-        apiKey = project.curseforge_key
-    }
-
-    project {
-        id = project.projectId
-        changelog = System.getenv('CHANGELOG') == null || System.getenv('CHANGELOG').equals('none') ? getChangelogText() : System.getenv('CHANGELOG')
-        changelogType = 'html'
-        releaseType = 'alpha'
-        mainArtifact(jar) {
-            displayName = "Chisel - ${version}"
-        }
-    }
-}
-
